# ollama-cli

./: README.md  pyproject.toml
src/ollama_cli/: ollama_cli_main.py
