[project]
name = "ollama-cli"
version = "0.0.1"
description = """Simple command line tool that reads a text from stdin and pipes
it to Ollama. One can set all Ollama options on commandline as well as define
termination criteria in terms of maximum number of lines, paragraphs, or
repeated lines."""
readme = "README.md"
authors = [
    { name = "Bastien Chevreux", email = "bach@chevreux.org" }
]
requires-python = ">=3.13"
dependencies = [
    "dm-ollamalib>=0.0.2",
    "dm-streamvalve>=0.0.5",
    "httpx>=0.28.1",
    "ollama>=0.4.7",
]

[project.scripts]
ollama-cli = "ollama_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest-cov>=6.0.0",
]
